tests/samples/negative/pointers/implicit_pointer_const.ax
module implicit_pointer_const;

fn accept(ptr: *const i32) -> i32 {
    return *ptr;
}

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *mut i32 = &value;
    return accept(ptr);
}
